# curiefense

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  RELEASES.md  ROADMAP.md
.github/workflows/: codeql-analysis.yml  curiefense-build-images.yml  curiefense-manual-build-image.yml  e2e-compose-rust-tests.yml  e2e-compose-tests.yml  e2e-minikube-filebeat.yml  e2e-minikube-fluentd.yml  e2e-minikube-logstash.yml  e2e-rust-tests.yml  e2e-tests.yml  helm-v2-deploy.yml  run-curieconf-client-tests.yml  run-curieconf-rust-tests.yml  run-curieconf-tests.yml  run-luacheck.yml  run-pylint.yml  run-shellcheck.yml  upload-test-results.yml
curiefense/curieconf/client/: setup.py
curiefense/curieconf/server/: setup.py
curiefense/curieconf/test/: config.batch.json  conftest.py  data.py  test_api.py  test_utils.py
curiefense/curieconf/utils/: setup.py
curiefense/curielogger/: curielogger.yml  go.mod  go.sum
curiefense/curielogger/convert-bq/: convert.py  steps.md
curiefense/curielogger/curielogger/: common.go  config.go  main.go  outputs.elasticsearch.go  outputs.fluentd.go  outputs.logstash.go  static.go  (+2 more)
curiefense/curielogserver/: setup.py
curiefense/curieproxy/: cf-config  envoy.yaml.head  envoy.yaml.tail  envoy.yaml.tls
curiefense/curieproxy/rust/: .gitignore  Cargo.toml  Dockerfile  Makefile  NOTES.md  test.lua
curiefense/curieproxy/rust/curiefense/: Cargo.toml
curiefense/curieproxy/rust/curiefense-ffi/src/: lib.rs
curiefense/curieproxy/rust/curiefense-lua/: Cargo.toml
curiefense/curieproxy/rust/curiefense-lua/src/: iptools.rs  lib.rs  lua.rs
curiefense/curieproxy/rust/curiefense-lua/src/iptools/: avltree.rs
curiefense/curieproxy/rust/curiefense-utils/src/: main.rs
curiefense/curieproxy/rust/curiefense/benches/: body_parse.rs  check_acl.rs  requestfields.rs  security_policies.rs  url_maps.rs
curiefense/curieproxy/rust/curiefense/src/: acl.rs  analyze.rs  body.rs  config.rs  contentfilter.rs  flow.rs  grasshopper.rs  incremental.rs  interface.rs  lib.rs  limit.rs  logs.rs  maxmind.rs  redis.rs  requestfields.rs  securitypolicy.rs  session.rs  tagging.rs  urlmap.rs  utils.rs  waf.rs
curiefense/curieproxy/rust/curiefense/src/body/: graphql.rs
curiefense/curieproxy/rust/curiefense/src/config/: contentfilter.rs  flow.rs  globalfilter.rs  hostmap.rs  limit.rs  profiling.rs  raw.rs  utils.rs  waf.rs
curiefense/curieproxy/rust/curiefense/src/utils/: decoders.rs  url.rs
curiefense/curieproxy/rust/luatests/: create_direct_tags.py  gotestwafimport.py  run.sh  test.lua
curiefense/curieproxy/rust/luatests/config/json/: acl-profiles.json  contentfilter-groups.json  contentfilter-profiles.json  contentfilter-rules.json  flow-control.json  globalfilter-lists.json  limits.json  profiling-lists.json  securitypolicy.json  urlmap.json  waf-profiles.json  waf-signatures.json
curiefense/curieproxy/rust/luatests/contentfilter_only/: test-contentfilter.json
curiefense/curieproxy/rust/luatests/flows/: banning (FIXME).json  banning.json  byquery.json  challenge.json  deny.json  different-hosts.json  multiip.json  on_header.json  simple.json  steps.json
curiefense/curieproxy/rust/luatests/gowaf/: blob.json
curiefense/curieproxy/rust/luatests/masking/: body.json  header.json  url.json
curiefense/curieproxy/rust/luatests/ratelimit/: test-ban.json  test-multiple-thresholds.json  test-same-country.json
curiefense/curieproxy/rust/luatests/raw_requests/: actions.json  body_decoding.json  collision.json  direct-tags.json  human.json  test-contentfilter.json  test-individual-category.json  test-multidomain.json  test-priority.json  test-region.json  test-tag-actions.json  test-waf-ignores.json  test-waf-mask.json  test-waf.json  test.json
curiefense/curieproxy/rust/luatests/requests/: r1.json
curiefense/curieproxy/rust/luatests/waf_only/: test-waf.json
curiefense/curieproxy/rust/src/: curiefense.rs  lib.rs
curiefense/curieproxy/rust/src/curiefense/: acl.rs  body.rs  config.rs  flow.rs  interface.rs  iptools.rs  limit.rs  logs.rs  lua.rs  redis.rs  requestfields.rs  session.rs  tagging.rs  urlmap.rs  utils.rs  waf.rs
curiefense/curieproxy/rust/src/curiefense/config/: flow.rs  hostmap.rs  limit.rs  profiling.rs  raw.rs  utils.rs  waf.rs
curiefense/curieproxy/rust/src/curiefense/iptools/: avltree.rs  sigset.rs
curiefense/curieproxy/rust/src/curiefense/utils/: url.rs
curiefense/curieproxy2/: docker-compose.yaml
curiefense/curietasker/: setup.py
curiefense/images/: build-docker-images.sh
curiefense/iptools/: Cargo.toml  Makefile  test.lua  test_geoip.lua  test_sigset.lua
curiefense/iptools/src/: avltree.rs  lib.rs  sigset.rs
curiefense/ui/: .eslintrc.js  .gitignore  .stylelintrc.js  babel.config.js  jest.config.js  jest.setup.js  jest.setup.ts  package-lock.json  package.json  tsconfig.json  vue.config.js
curieproxy2/curiefense/: Cargo.toml  NOTES.md
curieproxy2/curiefense/src/: curiefense.rs  lib.rs
curieproxy2/curiefense/src/curiefense/: acl.rs  config.rs  interface.rs  iptools.rs  limit.rs  lua.rs  maxmind.rs  session.rs  tagging.rs  utils.rs  waf.rs
curieproxy2/curiefense/src/curiefense/config/: hostmap.rs  limit.rs  waf.rs
curieproxy2/curiefense/src/curiefense/utils/: url.rs
deploy/: deploy-ci-compose.sh  deploy-ci.sh  deploy-gke.sh  locusttest.sh
deploy/compose/: .env  docker-compose-full.yaml  docker-compose-nginx.yaml  docker-compose.yaml
deploy/filebeat/: filebeat.yml
e2e/: conftest.py  reqflip.py  requirements.txt  set_config.py  test_e2e.py
e2e/latency/: Curiefense performance report locust.ipynb  Curiefense performance report.ipynb  fortio-deployment.yml  fortio-service.yml  ratings-virtualservice.yml
e2e/logs-smoke-test/: checklogs-compose.sh  checklogs-helm.sh  checklogs.sh
(+311 files in other folders)
