[package]
name = "iptools"
version = "0.1.0"
authors = ["phil <phil@secdev.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib"]

[dependencies]
mlua = { version = "0.4", features = ["lua51", "module"] }
mlua_derive = "0.4"
cidr = "0.1.1"
rand = "0.7.3"
md5 = "0.7.0"
regex = "1.4.2"
maxminddb = "0.16.0"
urldecode = "0.1.1"
urlencoding = "1.1.1"
mlua_serde = "0.5.1"
