[package]
name = "curiefense"
version = "0.1.0"
authors = ["phil <phil@secdev.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
mlua = { version = "0.5", features = ["luajit", "module"] }
lazy_static = "*"
itertools = "0.10"
maxminddb = "0.13"
http = "0.2"
urlencoding = "1.1"
regex = "1"
ipnet = "2.3.0"
iprange = "0.6.3"
anyhow = "1.0"
redis = "0.19"
md5 = "0.7"
libinjection = "0.2"

[dependencies.hyperscan]
version = "0.2"
default-features = false
features = ["full"]
